# omni-test

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  omni.cmake  runAllTests.sh  test_omni.sh
protected/: original_code.f90
test/: CMakeLists.txt  test_base.cmake
test/abstract_type/: CMakeLists.txt  original_code.f90  reference.f90
test/class_array/: CMakeLists.txt  main.f90  original_code.f90  reference.f90  reference_main.f90
test/class_declaration1/: CMakeLists.txt  original_file.f90  reference.f90
test/contains/: CMakeLists.txt  reference.f90
test/dataref1/: CMakeLists.txt  main.f90  original_code.f90  reference.f90  reference_main.f90
test/external_type/: CMakeLists.txt  main.f90  original_code.f90  reference.f90  reference_main.f90
test/import/: CMakeLists.txt  original_code.f90
test/interface1/: CMakeLists.txt  main.f90  original_code.f90  reference.f90  reference_main.f90
test/iso_c_binding_module/: CMakeLists.txt  iso_c_binding.f90  original_code.f90
test/kind1/: simple_kind.f90
test/kind2/: issue108_prog.f90
test/private_public/: CMakeLists.txt  original_code.f90  reference.f90
test/procedure/: CMakeLists.txt  original_code.f90
test/protected/: CMakeLists.txt  reference.f90
test/selected_real_kind/: mo_kind.f90  mo_module.f90
test/selecttype/: main.f90  original_code.f90
test/selecttype1/: CMakeLists.txt  original_code.f90  reference.f90  reference_main.f90
test/tbp1/: original_code.f90  reference.f90
test/tbp2/: CMakeLists.txt  original_code.f90  reference.f90
test/tbp3/: CMakeLists.txt  original_code.f90  reference.f90
test/tbp4/: CMakeLists.txt  main.f90  original_code.f90  reference.f90  reference_main.f90
test/type/: CMakeLists.txt  original_code.f90
testcases/: test_base.cmake
testcases/contains/: original_code.f90  reference.f90
testcases/iso_c_binding_module/: CMakeLists.txt  original_code.f90
testcases/protected/: CMakeLists.txt
