# List of test cases
add_subdirectory(contains)
#add_subdirectory(iso_c_binding_module)
#add_subdirectory(protected)
#add_subdirectory(private_public)
add_subdirectory(tbp1)                   # Type-bound procedure #1
add_subdirectory(tbp2)                   # Type-bound procedure #2
add_subdirectory(tbp3)                   # Type-bound procedure #3
add_subdirectory(dataref1)               # Call to Type-bound procedure #1
add_subdirectory(selecttype1)            # select type with class is
add_subdirectory(external_type)            # select type with class is
